Css fix for sidebox and fullview when emoticon icon is not visible

--- a/public/plugin/css/app/fullview/applozic.fullview.css
+++ b/public/plugin/css/app/fullview/applozic.fullview.css
@@ -3648,3 +3648,6 @@ width:65%;
   padding: 0 5px;
   z-index: 2243001
 }
+.mck-text-box-width-increase {
+	width : calc(100% - 75px) !important;
+}
